wdl-analysis/tests/validation/duplicate-command/source.errors
error: conflicting task name `test`
   ┌─ tests/validation/duplicate-command/source.wdl:11:6
   │
 5 │ task test {
   │      ---- the task with the conflicting name is here
   ·
11 │ task test {
   │      ^^^^ this task conflicts with a previously used name

